Remove apache fileupload, tomahawk where possible